<resources>
    <string name="app_name">PlayStop</string>
    <string name="app_name_fa">پلی‌ استپ</string>
    <string name="default_notification_channel_id">playstop_notification_channel_id</string>
    <string name="default_notification_channel_name">default</string>
    <string name="default_notification_channel_description">default channel for notifications</string>
    <string name="try_again">تلاش مجدد</string>
    <string name="account">حساب</string>
    <string name="category">دسته‌بندی</string>
    <string name="news">اخبار</string>
    <string name="home">خانه</string>
    <string name="show_all">نمایش همه</string>
    <string name="imdb_empty">- :IMDB</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="free">رایگان</string>
    <string name="search">جستجو</string>
    <string name="no_result">نتیجه‌ای پیدا نشد</string>
    <string name="description">توضیحات</string>
    <string name="actors">بازیگران</string>
    <string name="director">کارگردان</string>
    <string name="writer">نویسنده</string>
    <string name="links">لینک‌ها</string>
    <string name="seasons">فصل‌ها</string>
    <string name="show_comments">مشاهده نظرات</string>
    <string name="comments">نظرات</string>
    <string name="failed_in_communication_with_server">خطا در برقراری اطلاعات با سرور</string>
    <string name="x_hours_x_minuets">%s ساعت و %s دقیقه</string>
    <string name="x_minuets">%s دقیقه</string>
    <string name="imdb_score_x">IMDB: %s</string>
    <string name="quality_x">کیفیت %s</string>
    <string name="votes_x">%s رای</string>
    <string name="submit">ثبت</string>
    <string name="write_your_comment">نظر خود را بنویسید</string>
    <string name="categories">دسته‌بندی‌ها</string>
    <string name="genres">ژانرها</string>
    <string name="suggestions">پیشنهادات</string>
    <string name="years">سال‌های تولید</string>
    <string name="user_account">حساب کاربری</string>
    <string name="logout">خروج از حساب</string>
    <string name="login_to_account">ورود به حساب</string>
    <string name="create_account">ساخت حساب</string>
    <string name="login">ورود</string>
    <string name="name">نام</string>
    <string name="enter_your_name">نام خود را وارد کنید</string>
    <string name="email">ایمیل</string>
    <string name="enter_your_email">ایمیل خود را وارد کنید</string>
    <string name="password">رمز عبور</string>
    <string name="enter_your_password">رمز عبور را وارد کنید</string>
    <string name="repeat_password">تکرار رمز عبور</string>
    <string name="enter_your_repeat_password">تکرار رمز عبور را وارد کنید</string>
    <string name="not_have_account">حساب کاربری ندارید؟</string>
    <string name="have_account">حساب کاربری دارید؟</string>
    <string name="name_can_not_be_empty">نام نمی‌تواند خالی باشد</string>
    <string name="email_can_not_be_empty">ایمیل نمی‌تواند خالی باشد</string>
    <string name="entered_email_is_invalid">آدرس ایمیل وارد شده اشتباه است</string>
    <string name="password_can_not_be_empty">رمز عبور نمی‌تواند خالی باشد</string>
    <string name="repeat_password_can_not_be_empty">تکرار رمز عبور نمی‌تواند خالی باشد</string>
    <string name="repeat_password_not_match_password">تکرار رمز عبور با رمز عبور یکسان نیست</string>
    <string name="email_or_password_is_incorrect">ایمیل یا رمز عبور اشتباه است</string>
    <string name="logged_in_successfully">با موفقیت به حساب کاربری وارد شدید</string>
    <string name="registered_successfully">حساب کاربری با موفقیت ساخته شد</string>
    <string name="comment_posted_successfully">نظر با موفقیت ثبت شد</string>
    <string name="no_comments">نظری ثبت نشده است</string>
    <string name="no_links">لینک دانلود موجود نیست</string>
    <string name="soon">به ‌زودی</string>
    <string name="unknown_time">زمان نامشخص</string>
    <string name="receive_by">دریافت با ...</string>
    <string name="send_by">ارسال با ...</string>
    <string name="version_x">نسخه %s</string>
    <string name="year_x">سال %s</string>
    <string name="x_GB">%s GB</string>
    <string name="x_MB">%s MB</string>
    <string name="subtitle">زیرنویس</string>
    <string name="download_subtitle">دریافت فایل زیرنویس</string>
    <string name="new_version">نسخه جدید !!</string>
    <string name="new_version_published">نسخه جدید برنامه منتشر شده است.</string>
    <string name="download">دانلود</string>
    <string name="later">بعدا</string>
    <string name="cancel">لغو</string>
    <string name="production_year">سال انتشار</string>
    <string name="download_movie_and_series">دانلود فیلم و سریال</string>
    <string name="notice">توجه !!</string>
    <string name="not_use_vpn">به منظور کارکرد بهتر برنامه بهتر است اتصال وی پی ان خود را قطع نمایید.</string>
    <string name="got_it">متوجه شدم</string>
    <string name="show_by">نمایش با ...</string>
    <string name="play">پخش</string>
    <string name="please_choose_play_or_download">مایل به پخش یا دانلود فایل هستید؟</string>
    <string name="trailer">پیش نمایش</string>
    <string name="trailer_phrase">(پیش نمایش)</string>
    <string name="choose_subtitle">انتخاب زیرنویس</string>
    <string name="subtitle_x">زیرنویس %s</string>
    <string name="failed_in_playing_video">خطا در پخش ویدئو</string>
    <string name="forgot_password">فراموشی رمز عبور</string>
    <string name="reset">بازیابی</string>
    <string name="phone_number">شماره تلفن</string>
    <string name="enter_your_phone_number">شماره تلفن خود را وارد کنید</string>
    <string name="entered_phone_number_is_invalid">شماره تلفن وارد شده اشتباه است</string>
    <string name="phone_number_can_not_be_empty">شماره تلفن نمی‌تواند خالی باشد</string>
    <string name="wrong_phone_number">شماره را اشتباه وارد کرده اید؟</string>
    <string name="enter_the_otp_sent_to_phone_number_x">کد فعال‌سازی ارسال شده به شماره %s را وارد کنید.</string>
    <string name="otp_verify">فعال‌سازی شماره تلفن</string>
    <string name="otp_can_not_be_empty">کد فعال‌سازی نمی‌تواند خالی باشد</string>
    <string name="entered_otp_is_invalid">کد فعال‌سازی وارد شده اشتباه است</string>
    <string name="phone_number_verified_successfully">شماره تلفن وارد شده با موفقیت تایید شد</string>
    <string name="please_verify_your_phone_number_before_exit">لطفا شماره تلفن خود را فعال نمایید در غیر این صورت قادر به استفاده از امکانات حساب کاربری خود نخواهید بود.</string>
    <string name="add_phone_number">اضافه کردن شماره تلفن</string>
    <string name="enter_phone_number_description">شماره تلفن خود را به صورت *********۰۹ وارد نمایید.</string>
    <string name="login_with_phone_number">ورود با شماره تلفن</string>
    <string name="otp_sent_successfully">کد فعال‌سازی برای شماره تلفن وارد شده ارسال شد</string>
    <string name="add_phone_number_later">بعدا اضافه میکنم</string>
    <string name="login_by_phone_number">ورود با شماره تلفن</string>
    <string name="login_and_watch">ورود و تماشا</string>
    <string name="verify_phone_and_watch">تایید شماره تلفن و تماشا</string>
    <string name="resend">ارسال مجدد</string>
    <string name="settings">تنظیمات</string>
    <string name="night_mode">حالت شب</string>
    <string name="off">خاموش</string>
    <string name="on">روشن</string>
    <string name="auto">خودکار</string>
    <string name="day_night_mode_auto_desc">تغییر خودکار حالت نمایش (حالت روشن در روز و حالت تاریک در شب)</string>
    <string name="liked_movies">فیلم‌های مورد علاقه</string>
    <string name="see_your_account_data">اطلاعات و تنظیمات حساب کاربری خود را مشاهده کنید</string>
    <string name="search_favorite_movies">فیلم‌های مورد نظر خود را جستجو کنید</string>
    <string name="access_movies_by_categories">فیلم‌ها را با دسته‌بندی‌های مختلف ببینید</string>
    <string name="complete_account_data">تکمیل اطلاعات کاربری</string>
    <string name="email_optional">ایمیل (اختیاری)</string>
    <string name="complete_later">بعداً تکمیل می‌کنم</string>
    <string name="edit_phone_number">ویرایش شماره تلفن</string>
    <string name="login_by_email">ورود با ایمیل</string>
    <string name="login_to_account_by_email">ورود به حساب با ایمیل</string>
    <string name="edit_account_data">ویرایش اطلاعات کاربری</string>
    <string name="please_add_text_for_comment">لطفا متن نظر خود را وارد نمایید</string>
    <string name="change_sort">ترتیب نمایش</string>
    <string name="sort_default">پبش‌فرض</string>
    <string name="sort_newest">جدیدترین‌ (سال ساخت)</string>
    <string name="sort_oldest">قدیمی‌ترین (سال ساخت)</string>
    <string name="sort_imdb_score">بیشترین امتیاز (IMDB)</string>
    <string name="top_score">بیشترین امتیاز</string>
    <string name="newest">جدیدترین</string>
    <string name="oldest">قدیمی‌ترین</string>
    <string name="login_or_signup">ورود / ساخت حساب</string>
    <string name="language">زبان</string>
    <string name="country">کشور سازنده</string>
    <string name="unknown">نامشخص</string>
    <string name="share_movie">اشتراک فیلم</string>
    <string name="share_this_movie_link">این فیلم را با دوستان خود به اشتراک بگذارید</string>
    <string name="like_movie">علاقه‌مندی</string>
    <string name="like_this_movie">این فیلم را به فهرست علاقه‌مندی‌های خود اضافه کنید و از بخش حساب کاربری به آن‌ها دسترسی داشته باشید</string>
    <string name="fast_forward_video">جلو بردن سریع</string>
    <string name="fast_forward_video_by_double_tap">با دو بار کلیک بر روی سمت راست صفحه، فیلم را ۱۰ ثانیه به جلو ببرید</string>
    <string name="rewind_video">برگرداندن</string>
    <string name="rewind_video_by_double_tap">با دو بار کلیک بر روی سمت چپ صفحه، فیلم را ۱۰ ثانیه به عقب برگردانید</string>
    <string name="similar_movies">فیلم‌های مشابه</string>
    <string name="no_similar">مورد مشابه وجود ندارد</string>
    <string name="send_review">امتیاز میدم</string>
    <string name="discard">بیخیال</string>
    <string name="review_desc">لطفا برای حمایت از برنامه و همچنین یاری ما در بهبود خدمات، نظرات خود را در صفحه‌ی برنامه با ما در میان بگذارید.</string>
    <string name="scoring_app">امتیازدهی به برنامه</string>
    <string name="subscription_status">وضعیت اشتراک</string>
    <string name="enabled">فعال</string>
    <string name="purchase">خرید</string>
    <string name="until_date_x">تا تاریخ %s</string>
    <string name="edit">ویرایش</string>
    <string name="purchase_subscription">خرید اشتراک</string>
    <string name="x_toman">%s تومان</string>
    <string name="no_products">محصولی برای خرید وجود ندارد</string>
    <string name="purchase_subscription_and_watch">خرید اشتراک و تماشا</string>
    <string name="payment_was_successful">پرداخت با موفقیت انجام شد</string>
    <string name="payment_was_not_successful">خطا در فرایند پرداخت</string>
    <string name="payment_description">مبلغ پرداختی از سوی شما تنها برای حمایت از مجموعه پلی استپ در جهت تداوم خدمات و رفع بیش از پبش نیازهای شما کاربران عزیز در خصوص فیلم و سریال است. از اینکه حامی ما هستید بسیار سپاسگزاریم.</string>
    <string name="disabled">غیر فعال</string>
    <string name="search_filter">فیلتر جستجو</string>
    <string name="clear_filters">حذف فیلترها</string>
    <string name="submit_filters">اعمال فیلترها</string>
    <string name="filter_categories_title">دسته‌بندی</string>
    <string name="filter_genres_title">ژانر</string>
    <string name="filter_sort_title">ترتیب نمایش</string>
    <string name="filter_languages_title">زبان</string>
    <string name="filter_years_title">سال ساخت</string>
    <string name="filter_score_title">امتیاز</string>
    <string name="filter_countries_title">کشور سازنده</string>
    <string name="subscription">اشتراک</string>
    <string name="edit_profile_info">ویرایش اطلاعات کاربری</string>
    <string name="request_movie">درخواست فیلم</string>
    <string name="enter_your_request_text">متن درخواست خود را وارد کنید ...</string>
    <string name="remove_device_x">حذف دستگاه %s</string>
    <string name="are_you_sure_to_remove_these_devices">آیا از حذف و قطع اتصال دستگاه‌های مورد نظر از حساب کاربری خود اطمینان دارید؟</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
</resources>