<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/terminate_device_dialog_title_tv"
            style="?attr/textAppearanceHeadline3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/remove_device_x"
            android:paddingVertical="@dimen/padding_standard"
            android:textColor="@color/pure_white"
            android:gravity="center"
            android:background="@drawable/shape_rectangle_top_rounded_10dp_accent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/terminate_device_dialog_desc_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?attr/textAppearanceBody1"
            android:layout_margin="@dimen/margin_standard"
            app:layout_constraintTop_toBottomOf="@id/terminate_device_dialog_title_tv"
            android:text="@string/are_you_sure_to_remove_these_devices"
            android:textColor="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/terminate_device_dialog_no_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?textAppearanceBody1"
            app:backgroundTint="@color/blue"
            android:textColor="@color/pure_white"
            android:layout_marginTop="@dimen/margin_standard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@id/terminate_device_dialog_desc_tv"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/margin_standard"
            app:layout_constraintStart_toEndOf="@id/terminate_device_dialog_yes_btn"
            android:layout_marginHorizontal="@dimen/margin_standard"
            android:text="@string/no"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/terminate_device_dialog_yes_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?textAppearanceBody1"
            app:backgroundTint="@color/redLight"
            android:textColor="@color/pure_white"
            app:layout_constraintTop_toTopOf="@id/terminate_device_dialog_no_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/terminate_device_dialog_no_btn"
            android:layout_marginStart="@dimen/margin_standard"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:text="@string/yes"/>

</androidx.constraintlayout.widget.ConstraintLayout>