<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".ui.signup.SignupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/signup_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorAccentDark"
        android:paddingTop="@dimen/status_bar_height">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_height"
            app:contentInsetEnd="@dimen/margin_standard"
            app:contentInsetStart="@dimen/margin_standard"
            app:contentInsetStartWithNavigation="@dimen/margin_standard"
            app:contentInsetEndWithActions="@dimen/margin_standard">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/signup_toolbar_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?textAppearanceBody1"
                    android:textColor="@color/white"
                    android:layout_marginEnd="@dimen/margin_standard"
                    android:text="@string/create_account"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/signup_back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="180"
                    app:srcCompat="@drawable/ic_back"
                    android:background="?android:selectableItemBackground"/>

            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:id="@+id/signup_name_bg_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shape_rectangle_rounded_10dp_white_opacity_10"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        app:layout_constraintTop_toBottomOf="@id/signup_appbar"
        app:layout_constraintBottom_toBottomOf="@id/signup_name_et"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signup_name_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/signup_name_bg_view"
        app:layout_constraintTop_toTopOf="@id/signup_name_bg_view"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:textColor="@color/colorAccent"
        style="?textAppearanceCaption"
        android:text="@string/name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/signup_name_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/signup_name_bg_view"
        app:layout_constraintEnd_toEndOf="@id/signup_name_bg_view"
        app:layout_constraintTop_toBottomOf="@id/signup_name_title_tv"
        android:layout_marginTop="@dimen/margin_medium"
        android:paddingBottom="@dimen/padding_standard"
        android:background="@android:color/transparent"
        android:textAppearance="?textAppearanceBody1"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:hint="@string/enter_your_name"
        android:paddingHorizontal="@dimen/padding_standard"/>

    <View
        android:id="@+id/signup_email_bg_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shape_rectangle_rounded_10dp_white_opacity_10"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/signup_name_bg_view"
        app:layout_constraintBottom_toBottomOf="@id/signup_email_et"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signup_email_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/signup_email_bg_view"
        app:layout_constraintTop_toTopOf="@id/signup_email_bg_view"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:textColor="@color/colorAccent"
        style="?textAppearanceCaption"
        android:text="@string/email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/signup_email_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/signup_email_bg_view"
        app:layout_constraintEnd_toEndOf="@id/signup_email_bg_view"
        app:layout_constraintTop_toBottomOf="@id/signup_email_title_tv"
        android:layout_marginTop="@dimen/margin_medium"
        android:paddingBottom="@dimen/padding_standard"
        android:background="@android:color/transparent"
        android:textAppearance="?textAppearanceBody1"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:hint="@string/enter_your_email"
        android:paddingHorizontal="@dimen/padding_standard"/>

    <View
        android:id="@+id/signup_password_bg_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shape_rectangle_rounded_10dp_white_opacity_10"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/signup_email_bg_view"
        app:layout_constraintBottom_toBottomOf="@id/signup_password_et"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signup_password_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/signup_password_bg_view"
        app:layout_constraintTop_toTopOf="@id/signup_password_bg_view"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:textColor="@color/colorAccent"
        style="?textAppearanceCaption"
        android:text="@string/password" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/signup_password_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/signup_password_bg_view"
        app:layout_constraintEnd_toEndOf="@id/signup_password_bg_view"
        app:layout_constraintTop_toBottomOf="@id/signup_password_title_tv"
        android:layout_marginTop="@dimen/margin_medium"
        android:paddingBottom="@dimen/padding_standard"
        android:background="@android:color/transparent"
        android:textAppearance="?textAppearanceBody1"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:hint="@string/enter_your_password"
        android:paddingHorizontal="@dimen/padding_standard"/>

    <View
        android:id="@+id/signup_repeat_password_bg_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shape_rectangle_rounded_10dp_white_opacity_10"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/signup_password_bg_view"
        app:layout_constraintBottom_toBottomOf="@id/signup_repeat_password_et"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signup_repeat_password_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/signup_repeat_password_bg_view"
        app:layout_constraintTop_toTopOf="@id/signup_repeat_password_bg_view"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:textColor="@color/colorAccent"
        style="?textAppearanceCaption"
        android:text="@string/repeat_password" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/signup_repeat_password_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/signup_repeat_password_bg_view"
        app:layout_constraintEnd_toEndOf="@id/signup_repeat_password_bg_view"
        app:layout_constraintTop_toBottomOf="@id/signup_repeat_password_title_tv"
        android:layout_marginTop="@dimen/margin_medium"
        android:paddingBottom="@dimen/padding_standard"
        android:background="@android:color/transparent"
        android:textAppearance="?textAppearanceBody1"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:hint="@string/enter_your_repeat_password"
        android:paddingHorizontal="@dimen/padding_standard"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_have_account_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_repeat_password_bg_view"
            android:text="@string/have_account"
            android:layout_marginTop="@dimen/margin_huge"
            android:textAppearance="?textAppearanceCaption"
            android:textColor="@color/white"/>

        <View
            android:id="@+id/signup_btn_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_default_size"
            android:background="@drawable/shape_rectangle_gradient_transparent_to_gray"
            app:layout_constraintTop_toBottomOf="@id/signup_have_account_btn"
            android:layout_marginTop="@dimen/margin_standard"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        app:layout_constraintTop_toBottomOf="@id/signup_btn_divider"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_huge"
        android:text="@string/submit"
        android:textAppearance="?textAppearanceBody1"
        android:textColor="@color/white"
        android:background="@drawable/shape_rectangle_rounded_28dp_gradient_purple_to_blue"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>